# learn_programming

./: .gitignore  Problems left in lab.md  Progress.md  README-1.md  README-2.md  README-3.md  README-4.md  README.md  Target.md
1_c++/: CodePractice.md  README.md
1_c++/1_basicusage/: Ch1-5_C++_basic.cpp  Chapter_1.cpp  Chapter_1_exer.cpp  Chapter_1_v2.cpp  Chapter_1_v3.cpp  Chapter_2_exer.cpp  Chapter_3_exer.cpp  Chapter_4_exer.cpp  MultiTestFuctions.cpp  hello_cpp.cpp  test.cpp
1_c++/2_function/: function.cpp
1_c++/3_array_pointer/: Chapter_5_exer.cpp  Chapter_5_pointer.cpp
1_c++/4_class_oop/: Chapter_10_exer.cpp  Chapter_10_operatoroverloading.cpp  Chapter_11_exer.cpp  Chapter_11_virtualFunction.cpp  Chapter_12_exer.cpp  Chapter_12_ios.cpp  Chapter_6_exer.cpp  Chapter_6_struct.cpp  Chapter_7_class.cpp  Chapter_7_exer.cpp  Chapter_8_exer.cpp  Chapter_8_static.cpp  Chapter_9_exer.cpp  Chapter_9_inheriting.cpp
1_c++/4_class_oop/Chapter_12_file/: Chapter_12.txt
1_c++/6_stl/: Chapter_13_exer.cpp  Chapter_13_template.cpp  Chapter_5_stl_brief_associatedContainer.cpp  Chapter_5_stl_brief_list.cpp  Chapter_5_stl_brief_stack+queue+priority_queue.cpp  Chapter_5_stl_brief_vector.cpp  Chapter_5_stl_multireturnvalue+ioefficiency.cpp  ch11_associatedContainer.cpp  ch11_associatedContainer_exer.cpp  ch3.3+3.4_vector+iterator_exer.cpp  ch9_seq_container_exer.cpp  ch9_sequentialContainer_exer.cpp  hp.txt
2_datastructure_algorithm/: Chapter_10_sort.cpp  Chapter_1_intro.cpp  README.md
2_datastructure_algorithm/0_string/: Chapter_1_intro.cpp  Chapter_2_linkedList.cpp  Chapter_6_matrix.cpp  Chapter_6_matrix_exer.cpp  Chapter_6_string+KMP.cpp  Chapter_6_string+matrix.cpp  Chapter_6_string_exer.cpp  README.md
2_datastructure_algorithm/1_array_sort/: Chapter_10_exer.cpp  README.md
2_datastructure_algorithm/2_list/: Chapter_2_exer.cpp  Chapter_2_linkedList.cpp  Chapter_2_linkedList_2.cpp  Chapter_2_linkedList_3.cpp  Chapter_3_exer.cpp  Chapter_3_stack.cpp  Chapter_4_exer.cpp  Chapter_4_queue.cpp  Chapter_6_general_list.cpp  Chapter_7_tree.cpp  README.md
2_datastructure_algorithm/3_tree/: Chapter_7_DFS.cpp  Chapter_7_Huffman_tree.cpp  Chapter_7_exer.cpp  Chapter_7_red_black_tree.cpp  Chapter_7_tree.cpp  README.md  chapter_7_rbtree_exer.cpp  test.cpp
2_datastructure_algorithm/4_graph/: Chapter_8_BFS.cpp  Chapter_8_DFS.cpp  Chapter_8_graph.cpp  README.md
2_datastructure_algorithm/5_algorithm/: README.md
2_datastructure_algorithm/6_matrix/: Chapter_6_matrix.cpp  Chapter_6_matrix_exer.cpp
3_code_practice/: README.md  array_1.cpp
3_tools/cmake/: CMake常用指令.md  README.md  单个源文件下Cmake.md  模块的使用和自定义模块.md  静态库与动态库构建与安装.md
3_tools/cmake/summercamp/t3/lib/: CMakeLists.txt
3_tools/cmake/summercamp/t4/: CMakeLists.txt
3_tools/cmake/summercamp/test/: CMakeLists.txt
3_tools/git/: git-tips.md  gitee_homework_usage.md  git简明教程.md
3_tools/linux/: README.md
3_tools/markdown/class/: README.md
4_projects/: README.md
4_projects/qt_demos/: README.md
4_projects/qt_demos/1_simple_draw/: README.md  main.cpp  mainwindow.cpp  mainwindow.h  simple_draw.pro
4_projects/qt_demos/2_draw_map/: draw_map.cpp  draw_map.pro  map_viewer.cpp  map_viewer.h
4_projects/sfml_demos/: README.md
4_projects/sfml_demos/1_Tetris/: README.md
4_projects/sfml_demos/2_Snake/: README.md  a.out
4_projects/sfml_demos/3_Chess/: Connector.hpp  main.cpp  stockfish
5_advanced/: README.md
5_advanced/1_CMake/simple_exe/: CMakeLists.txt
5_advanced/1_CMake/simple_sharedlib/: CMakeLists.txt
5_advanced/1_CMake/simple_sharedlib/utils/: utils.cpp
5_advanced/1_CMake/simple_staticlib/: CMakeLists.txt
5_advanced/4_DesignPattern_UML/: README.md
5_advanced/4_DesignPattern_UML/sample_oo-design/: .gitignore  CMakeLists.txt  README.md
5_advanced/4_DesignPattern_UML/sample_oo-design/cmake/: FindOpenCV.cmake
5_advanced/4_DesignPattern_UML/sample_oo-design/cmake/linux64/: FindGLEW.cmake  FindQt.cmake  FindSystem.cmake
5_advanced/4_DesignPattern_UML/sample_oo-design/cmake/vs2015x64/: FindGLEW.cmake  FindOPENGL.cmake  FindQt.cmake  shared_export.map
5_advanced/4_DesignPattern_UML/sample_oo-design/cmake/vs2015x64/glew-1.13.0/lib/Release/Win32/: glew32.exp  glew32.lib
5_advanced/4_DesignPattern_UML/sample_oo-design/cmake/vs2015x64/glew-1.13.0/lib/Release/x64/: libglew32.lib
5_advanced/4_DesignPattern_UML/sample_oo-design/src/: comm.h  datalink_protocol.h  main.cpp  uav.h
5_advanced/4_DesignPattern_UML/svar_module/other/test/: CMakeLists.txt
5_advanced/4_DesignPattern_UML/svar_module/other/test/src/: Glog.h  Messenger.h  add.cpp  useadd.cpp
5_advanced/5_MultiThread/: README.md
5_advanced/6_Debug/backward/: README.md  (+1 more)
5_advanced/programming_standard/: README.md
5_tools/cmake/: 工程下Cmake.md
5_tools/git/: README.md
6_adv_projects/: README.md
6_tools/: README.md
6_tools/cmake/: CMake变量.md
6_tools/debug/: README.md
6_tools/flickers/: flickers.md
6_tools/git/: HowToForkClone.md  HowToPullRequest.md  README.md  git-tips.md  gitee_addmember.md  gitignore.txt
6_tools/latex/: Readme.md
6_tools/linux/: README.md  learn_bash.md
6_tools/markdown/: README.md
6_tools/qt/: README.md
6_tools/tele_server/: flickers.md  linux_cmd.md
7_adv_c++/: README.md
8_other/: Compiler.md  OperatingSystem.md
demo_code/: README.md
demo_code/1_MultiTestFunctions/: MultiTestFuctions.cpp
images/: study-methods.pptx
learn_log/: 20201006_log.md  20201007_log.md  20201008_log.md  20201009_log.md  20201010_log.md  20201011_log.md  20201012_log.md  20201013.md  20201014.md  20201015.md  20201016.md  20201017.md  20201019.md  20201020.md  20201021.md  20201022.md  20201023.md  20201024.md  20201025.md  20201026.md  20201027.md  20201028.md  20201029.md  20201126.md  20201127.md  20201207.md  20201209.md  20201210.md  20201211.md  20201213.md  20201214.md  20201215.md  20201216.md  20201217.md  20201218.md  20201224.md  20210115.md  20210116.md  20210117.md  20210118.md  (+16 more)
learn_log/report/: 20200511_report_demo.md  20201013_report_week1.md
report/: 20190304_report_demo.md  20201013_report_week1.md
(+154 files in other folders)
